enh: enabled ZGC / Generational ZGC for Jenkins